content/07/07.04/script.js.adoc
include::./title.adoc[]

Let’s try to distill the essence of this scenario by removing the incidental details.

shot::[1, "Opens the premium account feature"]

[source,gherkin]
----
include::../code/js/02-add-rules-to-feature-description/features/premium_shouts.feature[lines=13..45]
----

We can start with this step, `When Sean shouts "Come and buy a coffee".`

From what what we know about the rules, what’s important here is that the shout contains the word “buy”. So let’s write that:

shot::["Changes step to When Sean shouts a message containing the word "buy"]
[source, gherkin]
----
include::../code/js/03-intention-revealing-buy-step/features/premium_shouts.feature[lines=15]
----

Better. We still have a little bit of detail - the word buy - but that’s quite important, in fact it helps to illustrate our business rule.

We’ll need a new step definition for this, of course.

[source, bash]
----
npm exec cucumber-js -- --tags "not @todo"
----

shot::["Runs `cucumber --tags ~@todo`, copies / pastes step def snippet into steps file."]

We can just copy the code for shouting a message from this step down here for now. We will deal with this duplication, but later.

shot::["Copies code from step def below, then adds code above to create a test message containing the given word."]

[source, js]
----
include::../code/js/04-add-step-def-for-intention-revealing-buy-step/features/step_definitions/steps.js[lines=40..45]
----

Let’s run Cucumber to check we haven’t made any mistakes…

shot::["Runs `cucumber --tags ~@todo`."]
[source, bash]
----
npm exec cucumber-js -- --tags "not @todo"
----

All green. Good.

Now we can use that same step everywhere else in the scenario, too, where that is the real intent of the step.

shot::["Changes the other two steps that mention the word “buy”. Runs `cucumber --tags ~@todo`. All green."]

[source, gherkin]
----
include::../code/js/05-use-intention-revealing-step-everywhere/features/premium_shouts.feature[lines=13..45]
----

==== Distill the regular shout step

We can apply this same pattern to remove the noisy incidental details from this next step too. What’s the essence of this step?

[source, gherkin]
----
include::../code/js/05-use-intention-revealing-step-everywhere/features/premium_shouts.feature[lines=16]
----

In this case, it really doesn’t matter what Sean is shouting - a regular shout doesn’t have any effect on his premium account credits. So we could just re-word it like this:

shot::["Changes the step from And Sean shouts "My bagels are yummy" to And Sean shouts a message"]

[source, gherkin]
----
include::../code/js/06-sean-shouts-a-message/features/premium_shouts.feature[lines=16]
----

Again, we’ll need a new step definition, and again, we’ll just duplicate the code for shouting a message for now.

shot::["Runs `cucumber --tags ~@todo`,  copies snippet. Copies shouting code from step def below, then adds code above to create a test message."]

[source, js]
----
include::../code/js/06-sean-shouts-a-message/features/step_definitions/steps.js[lines=47..52]
----

We’ll run Cucumber again just in case...

shot::["Runs `cucumber --tags ~@todo`."]
[source, bash]
----
npm exec cucumber-js -- --tags "not @todo"
----

All green.

And finally, let’s use that new step everywhere we can… 

shot::["Changes two steps to that shout regular messages to use the new step"]

[source, gherkin]
----
include::../code/js/07-shout-a-message-everywhere/features/premium_shouts.feature[lines=13..45]
----

...and run Cucumber once again.

shot::["Runs `cucumber --tags ~@todo`"]

[source, bash]
----
npm exec cucumber-js -- --tags "not @todo"
----

All green.

==== Distill the long shout step

Now let’s deal with this next step. What’s the essence here?

[source, gherkin]
----
include::../code/js/07-shout-a-message-everywhere/features/premium_shouts.feature[lines=18..22]
----

Again, the exact words in the shout don’t have any significance in this scenario. What matters, if anything, is that this is a long message. It’s under 180 characters, but still longer than a regular message. It’s not clear how important this distinction is just yet, but let’s give the authors of this scenario the benefit of the doubt for now that there must be _some_ reason it's different. So we'll push the details about the message content down into the step definition, following the same recipe.

shot::["Changes the step to `And Sean shouts a long message`"]

[source, gherkin]
----
include::../code/js/08-reword-step/features/premium_shouts.feature[lines=18]
----

shot::["Runs `cucumber --tags ~@todo`"]

shot::["Copies / pastes step def snippet into steps file"]

Again, we’ll tolerate the duplication for now, and just generate a long message here.

shot::["Copies shouting code from step def below, then adds code above to create a 180 character test message."]

[source, js]
----
include::../code/js/09-define-step/features/step_definitions/steps.js[lines=54..61]
----

shot::["Runs `cucumber --tags ~@todo`. All green."]

==== Distill the over-long shout step

Now what’s interesting about this next step? 

[source, gherkin]
----
include::../code/js/08-reword-step/features/premium_shouts.feature[lines=20..28]
----

This shout is over our 180-character limit. After a quick chat with Paula, we’ve confirmed she wants to call this an _over-long message_. Let’s update the rule we wrote up earlier to document this evolution of our domain language:

shot::["Changes second rule “Long messages…” to “Over-long messages…”"]

[source, gherkin]
----
include::../code/js/10-document-refined-rule/features/premium_shouts.feature[lines=3..5]
----

Then we can use that term in a new, more abstract step:

shot::["Changes step to `And Sean shouts an over-long message`"]

[source, gherkin]
----
include::../code/js/11-reword-step/features/premium_shouts.feature[lines=20]
----

Again, we’ll make a step definition that duplicates the shouting code, and this time make a 181-character message, just long enough to be over the 180 character limit.

shot::["Copies shouting code from step def below, then changes first line to create a 181-character test message."]

[source, js]
----
include::../code/js/12-implement-over-long-step/features/step_definitions/steps.js[lines=63..69]
----

shot::["Runs `cucumber --tags ~@todo`. All green."]

Again, we have another step we can replace with this more abstract one:

shot::["Replace imperative step on line 22 with `Sean shouts an over-long message`"]

[source, gherkin]
----
include::../code/js/13-use-over-long-step-everywhere/features/premium_shouts.feature[lines=22]
----

shot::["Runs `cucumber --tags ~@todo`. All green."]

==== Remove pointless steps

Right. With the incidental details removed from these steps, it’s starting to become easier to see what’s going on. It would be even easier if we re-ordered them so they're grouped together. Let’s do that:

shot::["Re-orders When steps so each type of step is grouped together."]

[source, gherkin]
----
include::../code/js/14-like-with-like/features/premium_shouts.feature[lines=13..25]
----

So now we can clearly see that Sean shouts three regular messages, a long message, two over-long messages, and three messages containing the word “buy”. It’s still a lot to digest, but a clearer picture is starting to emerge.

Are there any other incidental details remaining in this scenario? In BRIEF terms, is every step here _essential_ to the purpose of this particular scenario?

Arguably, the steps that create regular and long messages are incidental, since they have no bearing on the behaviour we’re describing with this scenario. We can remove them altogether, and the behaviour should be exactly the same. So let’s do that:

shot::["Removes the first four When steps (remember to change And for When on the next step)"]
[source, gherkin]
----
include::../code/js/15-remove-pointless-steps/features/premium_shouts.feature[lines=13..21]
----

That’s better.

Now that we’ve removed all that incidental detail, it’s much easier to see how the figure of 11 credits has been calculated: two over-long messages at 2 credits per message, and three messages containing the word “buy” at 5 credits each makes a total of 19 credits, which subtracted from the initial 30 makes 11.

But we can make this even clearer.

==== Merge repeated steps

These repetitive steps aren’t necessary. They make this scenario look more like a computer program than a specification document. Instead of repeating the step “When Sean shouts an over-long message” over and over again, let’s just tell it like it is:
shot::["Replaces two steps with new step: `When Sean shouts 2 over-long messages`"]

[source, gherkin]
----
include::../code/js/16-merge-repeated-over-long-steps/features/premium_shouts.feature[lines=15]
----

We’ll need a new step definition for this one.

shot::["Runs `cucumber --tags ~@todo`. Copies step def snippet and pastes into steps file."]

We can re-use the existing step definition, we just need to run a loop around it, based on the number of messages specified in the scenario.

shot::["Copy / paste code from step def below. Add loop around the body of the code."]

[source, js]
----
include::../code/js/16-merge-repeated-over-long-steps/features/step_definitions/steps.js[lines=63..71]
----

shot::["Runs `cucumber --tags ~@todo`. All green."]

Let’s do the exact same thing with these other three steps.

shot::["Replaces three steps with new step: `When Sean shouts 3 messages containing the word “buy”`"]

[source, gherkin]
----
include::../code/js/17-merge-repeated-buy-steps/features/premium_shouts.feature[lines=16]
----

shot::["Runs `cucumber --tags ~@todo`. Copies step def snippet and pastes into steps file."]

Again, we have the bulk of this code that we can just recycle. We just need to capture the count, then add add a loop around the outside.

shot::["Copy / paste code from step def below. Add loop around the body of the code."]

[source, js]
----
include::../code/js/17-merge-repeated-buy-steps/features/step_definitions/steps.js[lines=40..50]
----

Let's step back and see how BRIEF our scenario reads now:

[source, gherkin]
----
include::../code/js/17-merge-repeated-buy-steps/features/premium_shouts.feature[lines=13..18]
----


Nice!

=== Rename scenario

Now things are really getting clearer.

There are still a couple of problems with this scenario. One is the name of the scenario. It really doesn’t tell us anything at all.

A great way to name your scenarios is to think about how they named episodes of the TV sitcom series, _Friends_. Remember? They were all called something like _The one where Ross is fine_ or _The one where Phoebe gets married_.

This is the one where… well.. _the one where Sean shouts some over-long messages and some containing the word “buy”._

shot::["Updates the name of the scenario"]

That’s quite a complicated name isn’t it? Maybe this scenario is doing too much!

...and that’s the second problem.

It’s trying to test both business rules at once.

==== Split scenario

Normally you’ll want at least one scenario for each business rule. That way, each scenario clearly illustrates the effect of that rule on the system. Sometimes it’s interesting to also document the effect that multiple rules have when they play out at the same time, but as you’ve already experienced, that can quickly get confusing.

You’ll often need more than one scenario to illustrate each rule, but in this case, one scenario for each rule looks like it will be fine for the time being. Let’s split this scenario in two: the one where Sean shouts several over-long messages, and the one where Sean shouts several messages containing the word “buy”.

shot::["Write out the two new scenarios, leaving the original in place."]

Great. Now the effect of each of these rules is much more clearly documented.

==== Remove original scenario

We run these new scenarios past Paula and she’s delighted. She really likes how they read. She asks us - why do we still need the original scenario?

Tamsin chimes in and says she has a concern that the rules might conflict with each other in the code somehow. As we talk about it, we realise that while we don’t need this one anymore 
shot::["removes original long scenario"]
there’s a missing scenario - where both rules apply to the _same message_: _The one where there’s a shout that’s both over-long and with the word “buy” in it._

We’d better document that as a question for now.

shot::["Writes up the question."]

==== Ask context question

While we have Paula and Tamsin’s attention, we ask a question we know often helps to discover missing scenarios:

> Is there another context that would result in a different outcome here?

They both think about this. Tamsin suggests starting Sean out with fewer credits, or shouting lots more messages, so that he runs out of credit. What would happen then?

Good question! It looks like there’s more to this feature than we’d previously thought. We’ll write that down as a question too. We still haven't even started fixing that bug yet!

shot::["Writes up the other question"]

==== Close

shot::["07.closing.common.animation.mp4"]

video::https://drive.google.com/uc?id=1FGdj-mN_h0aTk9p7c_sY5aIhuLeZeNkt[]

Well that’s been quite a session. We came in to fix one bug, and ended up having to fix our feature file first. We’re still not done with that, either. By pushing the incidental details down out of the scenario into the step definitions, we’ve made a mess of duplication in the step definitions. There’s a neat fix for that, but we’ll have to save that for next time.

Let’s reflect on what we’ve learned.

When scenarios are very heavy in detail, they can be confusing to read. We call these _incidental details_ when they are just noise that detracts from communicating the essence of the scenario.

Scenarios that are heavy in detail are sometimes said to be written in an _imperative_ style. They contain lots of “how”, and not much “what”. We often use this style when we’re working on a brand new domain problem and are still grasping for an understanding. We just want to write _something_ down.

As your confidence in your domain knowledge improves, you’d expect to feel comfortable removing some of these details. Scenarios with more abstract steps like this are said to be written in a _declarative_ style.

Using a more declarative style might mean you’ll need to find names for things, like the way we had to name an over-long message. This discovery of your ubiquitous domain language is a great side-effect of distilling the essence of your scenarios. Now you have a bigger vocabulary that you can use all the way down through your code, and in your future conversations, too.

One down-side, as you’ve seen, of pushing the “how” down from your scenarios into the step definitions is that the step definition code becomes more complex. Some teams reject this, and prefer to use a simple vocabulary of step definitions, leaving more detail in their scenarios. There are no right and wrong answers here, but if you have sufficient competence with code, you’ll easily be able to handle that extra bit of complexity and keep readability top of your priorities.

That’s what we’ll work on next time. Bye for now!
